crates/eml_cli/tests/snapshots/ui__run@functions__evaluation_order.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/evaluation_order.em
---
--- stdout ---
f
g
2
f
g
2
w
g
2
f
g
2
f
g
2
g
f
2
--- stderr ---
