crates/eml_cli/tests/snapshots/ui__run@functions__user_operators.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/functions/user_operators.em
---
--- stdout ---
a/b/c
5
6
--- stderr ---
